Fix spacing in certain places and add shadow to cards

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ button {
 
 .head-action {
     align-items: center;
+    justify-content: flex-end;
     gap: 24px;
     padding: 0 16px;
 }
@@ -222,7 +223,7 @@ button {
 .cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 32px;
+    gap: 24px;
     padding: 12px 0;
 }
 
@@ -236,6 +237,8 @@ button {
     border-left: 8px solid var(--tertiary-color);
     border-radius: 8px;
     padding: 32px 16px;
+
+    box-shadow: 2px 3px 4px lightgrey;
 }
 
 .card > p {
